--- a/pages/market.html
+++ b/pages/market.html
@@ -16,6 +16,15 @@
         <img class="section_nft" src="../images//nft1/0fb42b241189dee41b1ac0229877512609c0145922a3cb92d87cfbe1f5d5d44e-YzE1Nzg0NmEtMWZlYS00MDdhLTlkZGQtZjRkMzkxNTcxY2Nj.webp" alt="">
         <button class="section_button">Follow</button>
     </section>
+
+    <section class="search_titles">
+        <div class="titles_box">
+            <h1 class="titles_box_headtitle">Doodles rainbow NFT</h1>
+            <p></p>
+        </div>
+        <input class="search" type="text" placeholder="Name and description...">
+    </section>
+
     <main class="main">
         <section class="main_cards">
             <div class="main_card">
