--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <p class="main_section_subtitle">
                 Discover a World of Digital Artistry: Dive into the boundless realm of non-fungible tokens (NFTs) on our innovative platform, where creativity knows no limits. Immerse yourself in a gallery of unique and captivating digital artworks, each a testament to the ingenuity of its creator. From mesmerizing animations to thought-provoking illustrations, our curated collection showcases the diverse spectrum of NFT artistry. Whether you're an avid collector, a passionate creator, or simply an admirer of digital expression, our platform offers an unparalleled opportunity to engage with the forefront of artistic innovation. Join us on this journey into the future of art and blockchain technology, where every token tells a story and every creation is a masterpiece in its own right.
             </p>
-            <button class="main_section_button">Buy NFT</button>
+            <a href="./pages/market.html"><button class="main_section_button">Buy or Sell</button></a>
         </section>
         <!-- <section class="main_section">
             <img class="main_section_image" src="./images/earth.webp" alt="">
