--- a/pages/market.html
+++ b/pages/market.html
@@ -9,17 +9,18 @@
 </head>
 <body>
     <header class="header">
-        <img class="header_image" src="../images/doodles4.jpg" alt="">
+        <img class="header_image" src="../images/back3.jpg" alt="">
+        <h1 class="header_title">blots-nft.xyz</h1>
     </header>
     
     <section class="section">
-        <img class="section_nft" src="../images//nft1/0fb42b241189dee41b1ac0229877512609c0145922a3cb92d87cfbe1f5d5d44e-YzE1Nzg0NmEtMWZlYS00MDdhLTlkZGQtZjRkMzkxNTcxY2Nj.webp" alt="">
+        <img class="section_nft" src="../images/nft1/nftback.avif" alt="">
         <button class="section_button">Follow</button>
     </section>
 
     <section class="search_titles">
         <div class="titles_box">
-            <h1 class="titles_box_headtitle">Doodles rainbow NFT</h1>
+            <h1 class="titles_box_headtitle">Blots NFT</h1>
             <p></p>
         </div>
         <input class="search" type="text" placeholder="Name and description...">
@@ -29,55 +30,15 @@
         <section class="main_cards">
             <div class="main_card">
                 <img class="main_card_image" src="../images/nft1/source.gif" alt="">
-                <h1 class="main_card_name">Doodles birthday</h1>
+                <h1 class="main_card_name">Blots astronaut</h1>
                 <div class="button_price">
                     <p class="main_card_price">Price: $120.99</p>
                     <button class="main_card_button">Buy</button>
                 </div>
             </div>
             <div class="main_card">
-                <img class="main_card_image" src="../images/nft1/0fb42b241189dee41b1ac0229877512609c0145922a3cb92d87cfbe1f5d5d44e-YzE1Nzg0NmEtMWZlYS00MDdhLTlkZGQtZjRkMzkxNTcxY2Nj.webp" alt="">
-                <h1 class="main_card_name">Doodles birthday</h1>
-                <div class="button_price">
-                    <p class="main_card_price">Price: $120.99</p>
-                    <button class="main_card_button">Buy</button>
-                </div>
-            </div>
-            <div class="main_card">
-                <img class="main_card_image" src="../images/nft1/200.gif" alt="">
-                <h1 class="main_card_name">Doodles birthday</h1>
-                <div class="button_price">
-                    <p class="main_card_price">Price: $120.99</p>
-                    <button class="main_card_button">Buy</button>
-                </div>
-            </div>
-            <div class="main_card">
-                <img class="main_card_image" src="../images/nft1/200w (1).gif" alt="">
-                <h1 class="main_card_name">Doodles birthday</h1>
-                <div class="button_price">
-                    <p class="main_card_price">Price: $120.99</p>
-                    <button class="main_card_button">Buy</button>
-                </div>
-            </div>
-            <div class="main_card">
-                <img class="main_card_image" src="../images/nft1/4027eb4d78a4a4c07b743e8a00614744.gif" alt="">
-                <h1 class="main_card_name">Doodles birthday</h1>
-                <div class="button_price">
-                    <p class="main_card_price">Price: $120.99</p>
-                    <button class="main_card_button">Buy</button>
-                </div>
-            </div>
-            <div class="main_card">
-                <img class="main_card_image" src="../images/nft1/70ec1a6d-e28a-4591-b570-06d3bec1c5e0_rwc_134x0x1235x966x1235.gif" alt="">
-                <h1 class="main_card_name">Doodles birthday</h1>
-                <div class="button_price">
-                    <p class="main_card_price">Price: $120.99</p>
-                    <button class="main_card_button">Buy</button>
-                </div>
-            </div>
-            <div class="main_card">
-                <img class="main_card_image" src="../images/nft1/732cfef1f0bf50d631a812bc583246f4.avif" alt="">
-                <h1 class="main_card_name">Doodles birthday</h1>
+                <img class="main_card_image" src="../images/nft1/6neqaje0ofq71.jpg" alt="">
+                <h1 class="main_card_name">Blots astronaut</h1>
                 <div class="button_price">
                     <p class="main_card_price">Price: $120.99</p>
                     <button class="main_card_button">Buy</button>
@@ -85,7 +46,47 @@
             </div>
             <div class="main_card">
                 <img class="main_card_image" src="../images/nft1/dMqxHmPPA8fd.gif" alt="">
-                <h1 class="main_card_name">Doodles birthday</h1>
+                <h1 class="main_card_name">Blots astronaut</h1>
+                <div class="button_price">
+                    <p class="main_card_price">Price: $120.99</p>
+                    <button class="main_card_button">Buy</button>
+                </div>
+            </div>
+            <div class="main_card">
+                <img class="main_card_image" src="../images/nft1/FBbdce2XoAMjoYv.jpg_large" alt="">
+                <h1 class="main_card_name">Blots astronaut</h1>
+                <div class="button_price">
+                    <p class="main_card_price">Price: $120.99</p>
+                    <button class="main_card_button">Buy</button>
+                </div>
+            </div>
+            <div class="main_card">
+                <img class="main_card_image" src="../images/nft1/4027eb4d78a4a4c07b743e8a00614744.gif" alt="">
+                <h1 class="main_card_name">Blots astronaut</h1>
+                <div class="button_price">
+                    <p class="main_card_price">Price: $120.99</p>
+                    <button class="main_card_button">Buy</button>
+                </div>
+            </div>
+            <div class="main_card">
+                <img class="main_card_image" src="../images/nft1/FBCs0ORUUAA8v4q.jpg_large" alt="">
+                <h1 class="main_card_name">Blots astronaut</h1>
+                <div class="button_price">
+                    <p class="main_card_price">Price: $120.99</p>
+                    <button class="main_card_button">Buy</button>
+                </div>
+            </div>
+            <div class="main_card">
+                <img class="main_card_image" src="../images/nft1/FBMYwueWEAEYV5-.jpg_large" alt="">
+                <h1 class="main_card_name">Blots astronaut</h1>
+                <div class="button_price">
+                    <p class="main_card_price">Price: $120.99</p>
+                    <button class="main_card_button">Buy</button>
+                </div>
+            </div>
+            <div class="main_card">
+                <img class="main_card_image" src="../images/nft1/dMqxHmPPA8fd.gif" alt="">
+                <h1 class="main_card_name">Blots astronaut</h1>
                 <div class="button_price">
                     <p class="main_card_price">Price: $120.99</p>
                     <button class="main_card_button">Buy</button>
@@ -93,7 +94,7 @@
             </div>
             <div class="main_card">
                 <img class="main_card_image" src="../images/nft1/doodles.gif" alt="">
-                <h1 class="main_card_name">Doodles birthday</h1>
+                <h1 class="main_card_name">Blots astronaut</h1>
                 <div class="button_price">
                     <p class="main_card_price">Price: $120.99</p>
                     <button class="main_card_button">Buy</button>
@@ -101,7 +102,7 @@
             </div>
             <div class="main_card">
                 <img class="main_card_image" src="../images/nft1/eae09bafa4c8b713387d110d3fdf2b75.png" alt="">
-                <h1 class="main_card_name">Doodles birthday</h1>
+                <h1 class="main_card_name">Blots astronaut</h1>
                 <div class="button_price">
                     <p class="main_card_price">Price: $120.99</p>
                     <button class="main_card_button">Buy</button>
@@ -109,7 +110,7 @@
             </div>
             <div class="main_card">
                 <img class="main_card_image" src="../images/nft1/fe4daa69a5ee1a2e38473643b3924dc9f0537f680eeed9678e9e6eb171af5d34-NmY4N2E1YWItMmExZC00OTZkLWFjODgtNjk3YzhjYTVhOTU1.webp" alt="">
-                <h1 class="main_card_name">Doodles birthday</h1>
+                <h1 class="main_card_name">Blots astronaut</h1>
                 <div class="button_price">
                     <p class="main_card_price">Price: $120.99</p>
                     <button class="main_card_button">Buy</button>
@@ -117,7 +118,7 @@
             </div>
             <div class="main_card">
                 <img class="main_card_image" src="../images/nft1/FNQU5jzXEAEtuve.jpg" alt="">
-                <h1 class="main_card_name">Doodles birthday</h1>
+                <h1 class="main_card_name">Blots astronaut</h1>
                 <div class="button_price">
                     <p class="main_card_price">Price: $120.99</p>
                     <button class="main_card_button">Buy</button>
@@ -125,7 +126,7 @@
             </div>
             <div class="main_card">
                 <img class="main_card_image" src="../images/nft1/giphy.gif" alt="">
-                <h1 class="main_card_name">Doodles birthday</h1>
+                <h1 class="main_card_name">Blots astronaut</h1>
                 <div class="button_price">
                     <p class="main_card_price">Price: $120.99</p>
                     <button class="main_card_button">Buy</button>
@@ -133,15 +134,15 @@
             </div>
             <div class="main_card">
                 <img class="main_card_image" src="../images/nft1/iTUhqA1rG1qxWxMUCJqJRn9xRVc6nIG9Rp7uPopc.webp" alt="">
-                <h1 class="main_card_name">Doodles birthday</h1>
+                <h1 class="main_card_name">Blots astronaut</h1>
                 <div class="button_price">
                     <p class="main_card_price">Price: $120.99</p>
                     <button class="main_card_button">Buy</button>
                 </div>
             </div>
             <div class="main_card">
-                <img class="main_card_image" src="../images/nft1/P6Ipqim8lM0ajf3ygY9AsC3t6jbESoKxR6Hz0P8X.webp" alt="">
-                <h1 class="main_card_name">Doodles birthday</h1>
+                <img class="main_card_image" src="../images/nft1/america.avif" alt="">
+                <h1 class="main_card_name">Blots astronaut</h1>
                 <div class="button_price">
                     <p class="main_card_price">Price: $120.99</p>
                     <button class="main_card_button">Buy</button>
@@ -149,7 +150,7 @@
             </div>
             <div class="main_card">
                 <img class="main_card_image" src="../images/nft1/QmNu7RMnE5x6zMgBL5Xux8faQFCKNAYArtHwPnu4nV6Xti.png" alt="">
-                <h1 class="main_card_name">Doodles birthday</h1>
+                <h1 class="main_card_name">Blots astronaut</h1>
                 <div class="button_price">
                     <p class="main_card_price">Price: $120.99</p>
                     <button class="main_card_button">Buy</button>
@@ -157,7 +158,7 @@
             </div>
             <div class="main_card">
                 <img class="main_card_image" src="../images/nft1/QmNxYNrimJBJfQwutGcfvHpxKsTYTaYupZXViivYY8uPnd.png" alt="">
-                <h1 class="main_card_name">Doodles birthday</h1>
+                <h1 class="main_card_name">Blots astronaut</h1>
                 <div class="button_price">
                     <p class="main_card_price">Price: $120.99</p>
                     <button class="main_card_button">Buy</button>
@@ -165,7 +166,7 @@
             </div>
             <div class="main_card">
                 <img class="main_card_image" src="../images/nft1/QmSgprAJp3G8HgK9nWJtoh65VFuXcYYCWdT9apXFV9URZu.png" alt="">
-                <h1 class="main_card_name">Doodles birthday</h1>
+                <h1 class="main_card_name">Blots astronaut</h1>
                 <div class="button_price">
                     <p class="main_card_price">Price: $120.99</p>
                     <button class="main_card_button">Buy</button>
@@ -173,7 +174,15 @@
             </div>
             <div class="main_card">
                 <img class="main_card_image" src="../images/nft1/QmVQE36eU6mZsHjDVTP1vY1Hw9ix3XEwAhWtDRJ23NktxK.png" alt="">
-                <h1 class="main_card_name">Doodles birthday</h1>
+                <h1 class="main_card_name">Blots astronaut</h1>
+                <div class="button_price">
+                    <p class="main_card_price">Price: $120.99</p>
+                    <button class="main_card_button">Buy</button>
+                </div>
+            </div>
+            <div class="main_card">
+                <img class="main_card_image" src="../images/nft1/1.avif" alt="">
+                <h1 class="main_card_name">Blots Astronaut</h1>
                 <div class="button_price">
                     <p class="main_card_price">Price: $120.99</p>
                     <button class="main_card_button">Buy</button>
