--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header class="header">
         <img class="header_image" src="./images/logo.png" alt="">
-        <ion-icon class="header_icon" name="logo-twitter"></ion-icon>
+        <a href="https://www.youtube.com/"><ion-icon class="header_icon" name="logo-twitter"></ion-icon></a>
     </header>
 
     <main class="main">
