--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <footer class="footer">
         <p class="footer_autor">Buy securely on the blockchain</p>
         <img class="footer_image" src="./images/footer.gif" alt="">
-        <p class="footer_autor">COSMOS Corporation Ⓒ2001</p>
+        <p class="footer_autor">Blots Corporation Ⓒ2001 </p>
     </footer>
 </body>
 </html>
